# aind-video-utils

./: .copier-answers.yml  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-call.yml  docs-ci.yml  publish-call.yml
benchmarks/: benchmarking.py
docs/source/: conf.py
notebooks/: benchmarks.py  plot_benchmarks.py
scripts/: run_linters_and_checks.sh
src/aind_video_utils/: __init__.py  _rawvideo.py  benchmarking.py  color_spaces.py  compare_videos.py  encoding.py  ffmpeg_utils.py  frames.py  plotting.py  probe.py  transcode.py  utils.py  video_qc.py
src/aind_video_utils/scripts/: transcode_cli.py  video_qc_cli.py
tests/: test_init.py  test_probe.py  test_transcode.py
