[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aind-video-utils"
description = "Tools to work with videos using ffmpeg"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Allen Institute for Neural Dynamics" },
  { name = "Galen Lynch", email = "galen@galenlynch.com" },
]
classifiers = ["Programming Language :: Python :: 3"]
readme = "README.md"
version = "0.3.0"

dependencies = [
    "numpy",
]

[project.optional-dependencies]
plotting = ["matplotlib", "opencv-python>=4.13.0.90"]
transcode = ["pydantic-settings>=2.4", "rich>=13.0"]

[project.urls]
Repository = "https://github.com/AllenNeuralDynamics/aind-video-utils/"
Issues = "https://github.com/AllenNeuralDynamics/aind-video-utils/issues"
Changelog = "https://github.com/AllenNeuralDynamics/aind-video-utils/blob/main/CHANGELOG.md"

[project.scripts]
aind-video-qc = "aind_video_utils.scripts.video_qc_cli:main"
aind-transcode = "aind_video_utils.scripts.transcode_cli:main"

[dependency-groups]
types = ["mypy"]
dev = [{ include-group = "types" }, "aind-video-utils[plotting]", "aind-video-utils[transcode]", "codespell", "pytest", "pytest-cov", "ruff", "interrogate"]
jupyter = [{ include-group = "dev" }, "ipykernel", "pip"]

[tool.hatch.build.targets.wheel]
packages = ["src/aind_video_utils"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["benchmarks", "notebooks", "scripts"]

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "I", "F", "E", "W", "UP", "ANN", "PYI"]
extend-ignore = ["ANN401"]  # Skip self/cls type annotations
# Skip all type annotation checks in tests
per-file-ignores = { "tests/*.py" = ["ANN"] }
mccabe = { max-complexity = 14 }
pydocstyle = { convention = "numpy" }

[tool.codespell]
skip = ".git,*.pdf,*.svg,./bonsai,*.bonsai,uv.lock"
ignore-words-list = "nd"

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short --cov=src --cov-report=term-missing --cov-fail-under=0"
testpaths = ["tests"]

[tool.interrogate]
ignore-init-method = true
ignore-magic = true
ignore_module = true
fail-under = 30
exclude = [
  "__init__.py",
  "tests",
  "docs",
  "build",
  "examples",
  "site",
]

[tool.commitizen]
version_provider = "pep621"
update_changelog_on_bump = true
tag_format = "v$version"
major_version_zero = true

[tool.mypy]
files = ["src/aind_video_utils"]
strict = true
show_error_codes = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

